fix: landing - hero reducing fonts on small resolutions

--- a/src/app/(landing)/home/components/hero/hero.module.scss
+++ b/src/app/(landing)/home/components/hero/hero.module.scss
@@ -36,7 +36,9 @@
   margin-bottom: 10px;
   width: 100%;
 
-  @media (max-width: 1199px) and (min-width: 1024px) {
+  @media (max-width: 1199px) and (min-width: 970px) {
+    font-size: 61px;
+    line-height: 60px;
     margin-top: 50px;
   }
 
@@ -54,6 +56,10 @@
   display: inline-block;
   position: relative;
   height: 69px;
+
+  @media (max-width: 1199px) and (min-width: 970px) {
+    height: 50px;
+  }
 
   @media (max-width: 969px) {
     height: 2.45rem;
@@ -89,6 +95,11 @@
   font-weight: 400;
   line-height: 28px;
   margin-bottom: 31px;
+
+  @media (max-width: 1199px) and (min-width: 970px) {
+    font-size: 16px;
+    line-height: 22px;
+  }
 
   @media (max-width: 969px) {
     font-size: 1.6rem;
